test/error/index3.luau
local n = "hello"
n.format() -- lel bad example
